Landing page done and a sign up bucg resolved

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,3 +1,28 @@
-<p>
-  main-menu works!
-</p>
+<body class="main-menu-design">
+  <div class="row">
+
+    <div class="col-sm-8">
+     
+        <div class="logo-container">
+          <div class="logo">
+            <a routerLink="/">
+              <img src="assets/images/logo-horizontal.png" />
+            </a>
+          </div>
+        </div>
+      </div>
+        <div class="col-sm-4 d-flex align-items-center justify-content-end">
+          <div class="buttons ">
+            <a class="btn sing-button " routerLink="/sign-up">
+              SIGN UP
+            </a>
+
+            <a class="btn sing-button" routerLink="/sign-in">
+              SIGN IN
+            </a>
+          </div>
+
+        </div>
+
+    </div>
+</body>
