--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,12 +1,11 @@
 <body class="login">
-    <div class="container-fluid">
+ 
       <div class="row">
-        <div class="col-sm-offset-2 col-sm-8">
-          <!-- <main-menu></main-menu> -->
-         
+        <div class=" col-sm-12">
+          <main-menu></main-menu>
         </div>
       </div>
-    </div>
+
     <div>
       <div class="login_wrapper">
         <div class="animate form login_form">
@@ -16,7 +15,7 @@
               <div class="clearfix"></div>
               <div *ngIf="registerSuccess" class="alert alert-success" style="font-size: 17px" ><span >Success!</span> You can now 
                   <u >
-                      <a routerLink="/login" style="color:white; font-size: 17px">login</a>
+                      <a routerLink="/sign-in" style="color:white; font-size: 17px">sign in</a>
                      </u>
         
               </div>
