--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,12 +1,34 @@
-<ul class="nav navbar-nav navbar-right">
-  <li>
-    <a routerLink="/sign-up">
-      Sign up
-    </a>
-  </li>
-  <li>
-    <a routerLink="/sign-in">
-      Sign in
-    </a>
-  </li>
-</ul>
+<div class="main-container">
+
+    <main-menu></main-menu>
+    <div class="parallax-container">
+        <div class="animate slideInDown">
+            <img src="assets/images/AroundTheWorld.png">
+        </div>
+    </div>
+
+    <div class="content-container">
+        <div class="content">
+            <h1 class="text-center">UNIQUE EXPERIENCES ALL OVER THE WORD
+            </h1>
+
+        </div>
+    </div>
+    <div class="parallax-container2"></div>
+
+    <div class="content-container">
+        <div class="content-two row">
+            <div class="col-md-4">
+                <h3>START PLANNING YOUR NEXT ADVENTURE</h3>
+            </div>
+            <div class="col-md-8">
+                <p>It can be hard to know where to start when planning your dream trip. What’s the first step? What’s the second?
+                    Third? Fourth? Travel can seem like a daunting subject with so much information available and, the longer
+                    you go away, the more things you seem to have to think about.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+</div>
