--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,11 +1,11 @@
 <body class="login">
-  <div class="container-fluid">
+ 
     <div class="row">
-      <div class="col-sm-offset-2 col-sm-8">
-        <!-- <main-menu></main-menu> -->
+        <div class=" col-sm-12">
+        <main-menu></main-menu>
       </div>
     </div>
-  </div>
+
   <div>
     <div *ngIf="!lostPassword" >
       <div class="login_wrapper">
