--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,25 +1,24 @@
-<body class="main-menu-design">
+<div class="main-menu-design">
   <div class="row">
 
     <div class="col-sm-4">
-     
-        <div class="logo-container">
+       
           <div class="logo">
             <a routerLink="/">
               <img src="assets/images/Circle.png" />
             </a>
           </div>
-        </div>
+      
       </div>
 
       <div class="col-sm-4">
-          <div class="logo-container">
+         
             <div class="align-container logo">
               <a routerLink="/">
                 <img src="assets/images/name.png" />
               </a>
             </div>
-          </div>
+        
         </div>
         
         <div class="col-sm-4 d-flex align-items-center justify-content-end">
@@ -36,4 +35,4 @@
         </div>
 
     </div>
-</body>
+  </div>
