--- a/src/app/user/edit-profile/edit-profile.component.html
+++ b/src/app/user/edit-profile/edit-profile.component.html
@@ -1,36 +1,132 @@
 <div class="wrapper">
-  <div class="profile-container">
-    <h3>My account</h3>
-    <h6>Edit your personal information</h6>
-  </div>
-  <br>
-  <div class="profile-container">
-      <h6>Edit your profile information:</h6>
-      <br>
-      <form [formGroup]='userForm'>
-          <label>First Name</label>
-          <div>
-              <input type="text" class="form-control" placeholder=""  formControlName="firstName" />
-          </div>
-          <br>
+    <div class="profile-container">
+        <h3>My account</h3>
+        <h6>Edit your personal information</h6>
+    </div>
+    <br>
+    <div *ngIf="showPictureProfile">
+        <div class="profile-container">
+            <h6>Edit your profile picture</h6>
+            <div class="d-flex align-items-center justify-content-center">
+                <img class="avatar-frame " src="assets/images/user.png" alt="Avatar" title="Change the avatar">
+            </div>
+            <div class="d-flex align-items-end justify-content-end">
+                <button class="btn btn-arrows " (click)="toInfoProfile()">
+                    <i class="fas fa-angle-right"></i>
+                </button>
+            </div>
+        </div>
 
-          <label>Last Name</label>
-          <div>
-              <input type="text" class="form-control" placeholder=""  formControlName="lastName" />
-          </div>
-          <br>
+    </div>
 
-          <label>Bio - Short for “Biography”. Tell something about yourself.</label>
-          <div>
-              <input type="text" class="form-control" placeholder=""  formControlName="bio" />
-          </div>
+    <div *ngIf="showProfileInfo">
+        <div class="profile-container">
+            <h6>Edit your profile information:</h6>
+            <br>
+            <form [formGroup]='userForm'>
+                <label>First Name</label>
+                <div>
+                    <input type="text" class="form-control" placeholder="" formControlName="firstName" />
+                </div>
+                <br>
 
-          <br>
-          <label>Home Base - Where you are currently living.(e.g. “Goa, India”)</label>
-          <div>
-              <input type="text" class="form-control" placeholder="Enter a location"  formControlName="homeBase" />
-          </div>
-          
-      </form>
+                <label>Last Name</label>
+                <div>
+                    <input type="text" class="form-control" placeholder="" formControlName="lastName" />
+                </div>
+                <br>
+
+                <label>Bio - Short for “Biography”. Tell something about yourself.</label>
+                <div>
+                    <input type="text" class="form-control" placeholder="" formControlName="bio" />
+                </div>
+                <br>
+
+                <label>Home Base - Where you are currently living.(e.g. “Goa, India”)</label>
+                <div>
+                    <input type="text" class="form-control" placeholder="Enter a location" formControlName="homeBase" />
+                </div>
+                <br>
+                <div>
+                    <a class="btn update-button" style="width:100%;" (click)="saveUserData(userForm.value)">Save</a>
+                </div>
+            </form>
+            <div class="d-flex ">
+                <div class="justify-content-start">
+                    <button class="btn btn-arrows" (click)="backPictureProfile()">
+                        <i class="fas fa-angle-left"></i>
+                    </button>
+                </div>
+                <div class="justify-content-end pull-right">
+                    <button class="btn btn-arrows" (click)="toChangePass()">
+                        <i class="fas fa-angle-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div *ngIf="showChangePass">
+        <div class="profile-container">
+            <h6>Change password:</h6>
+            <form [formGroup]='changePasswordForm'>
+                <div class="alert alert-error" *ngIf="messageDisplay">{{messageDisplayed}}</div>
+                <div *ngIf="changePasswordForm.controls['newPassword'].hasError('minlength')" class="alert alert-danger">
+                    Your password must be at least 6 characters.
+                </div>
+                <label>New password</label>
+                <div>
+                    <input type="password" class="form-control" placeholder="" formControlName="newPassword" />
+                </div>
+                <br>
+
+                <label>Confirmation</label>
+                <div>
+                    <input type="password" class="form-control" placeholder="" formControlName="confirmPassword" />
+                </div>
+                <br>
+                <div>
+                    <a class="btn update-button" style="width:100%;" (click)="updatePassword(changePasswordForm.value)">Change password</a>
+                </div>
+            </form>
+            <div class="d-flex ">
+                <div class="justify-content-start">
+                    <button class="btn btn-arrows" (click)="backProfileInfo()">
+                        <i class="fas fa-angle-left"></i>
+                    </button>
+                </div>
+                <div class="justify-content-end pull-right">
+                    <button class="btn btn-arrows" (click)="toChangeEmail()">
+                        <i class="fas fa-angle-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div *ngIf="showChangeEmail">
+        <div class="profile-container">
+            <h6>Change your email here. Please make sure to confirm your email before continuing.</h6>
+            <form [formGroup]='changeEmailForm'>
+                <div class="alert alert-error" *ngIf="changeEmailForm.controls['newEmail'].hasError('pattern')">Invalid email address</div>
+                <label>New email</label>
+                <div>
+                    <input type="text" class="form-control" placeholder="" formControlName="newEmail" />
+                </div>
+                <br>
+
+                <div>
+                    <a class="btn update-button" style="width:100%;" [ngClass]="changeEmailForm.status=='INVALID'?'disabled':null" (click)="changeEmail(changeEmailForm.value)">Change email</a>
+                </div>
+            </form>
+            <div class="d-flex align-items-end justify-content-start p-2">
+                <button class="btn btn-arrows" (click)="backChangePass()">
+                    <i class="fas fa-angle-left"></i>
+                </button>
+            </div>
+        </div>
+
     </div>
 </div>
