--- a/src/app/user/edit-profile/edit-profile.component.scss
+++ b/src/app/user/edit-profile/edit-profile.component.scss
@@ -14,3 +14,17 @@
 label{
    font-weight: bold;
 }
+a{
+  color:white!important;
+}
+.update-button{
+  background-color: #0B8457;
+}
+
+i{
+  font-size: large;
+}
+
+.btn-arrows{
+  background-color: white;
+}
