--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -30,9 +30,9 @@
                   (click)="emailLogin(userForm.value)">Sign in</a>
               </div>
               <div class="clearfix"></div>
-              <div>
+              <!-- <div>
                 <a class="btn btn-primary btn-lg google-button" style="width:100%;" (click)="googleLogin()">Sign in with GOOGLE</a>
-              </div>
+              </div> -->
 
               <div class="separator">
                 <p class="password_link">
