Added the user role for the register and when login I take the user data and store them in localStorage

--- a/src/app/user/edit-profile/edit-profile.component.html
+++ b/src/app/user/edit-profile/edit-profile.component.html
@@ -47,7 +47,7 @@
 
                 <label>Bio - Short for “Biography”. Tell something about yourself.</label>
                 <div>
-                    <input type="text" class="form-control" placeholder="" formControlName="bio" />
+                    <textarea  type="text" rows = "5" class="form-control" placeholder="" formControlName="bio" ></textarea>
                 </div>
                 <br>
 
