--- a/src/app/user/edit-profile/edit-profile.component.html
+++ b/src/app/user/edit-profile/edit-profile.component.html
@@ -11,6 +11,7 @@
                 <label for="file-input">
                     <div class="thumbnail d-flex align-items-center justify-content-center">
                         <img [src]="url" class=" profile profile-avatar" title="Change Picture">
+                        <img [src]="urlDummy" class="hide-this" title="Change Picture">
                     </div>
                 </label>
                 <input id="file-input" type="file" (change)="onSelectFile($event)" />
