--- a/src/app/user/top-menu/top-menu.component.html
+++ b/src/app/user/top-menu/top-menu.component.html
@@ -22,6 +22,9 @@
           <a class="btn sing-button" routerLink="/home/user-profile"  routerLinkActive="active-page" [routerLinkActiveOptions]="{exact: true}" >
             PROFILE
           </a>
+          <a class="btn sing-button "   routerLinkActive="active-page" [routerLinkActiveOptions]="{exact: true}" >
+            MORE
+          </a>
       </div>
         
         <div class="col-sm-4 d-flex align-items-center justify-content-end">
