--- a/src/app/user/edit-profile/edit-profile.component.html
+++ b/src/app/user/edit-profile/edit-profile.component.html
@@ -7,6 +7,7 @@
     <div *ngIf="showPictureProfile">
         <div class="profile-container">
             <h6>Edit your profile picture</h6>
+            <div class="alert alert-warning alert-morning-modified" *ngIf="updateMessageDisplay">{{updateMessageDisplayed}}</div>
             <div class="image-upload">
                 <label for="file-input">
                     <div class="thumbnail d-flex align-items-center justify-content-center">
@@ -19,7 +20,7 @@
             <div>
                 <a class="btn save-picture-button" (click)="saveUserProfilePicture()">Save Picture</a>
             </div>
-            <div *ngIf="updateMessageDisplay">ceasdasd{{updateMessageDisplayed}}</div>
+           
             <div class="d-flex align-items-end justify-content-end">
                 <button class="btn btn-arrows " (click)="toInfoProfile()">
                     <i class="fas fa-angle-right"></i>
@@ -32,6 +33,7 @@
     <div *ngIf="showProfileInfo">
         <div class="profile-container">
             <h6>Edit your profile information:</h6>
+            <div class="alert alert-warning alert-morning-modified" *ngIf="updateMessageDisplay">{{updateMessageDisplayed}}</div>
             <br>
             <form [formGroup]='userForm'>
                 <label>First Name</label>
@@ -87,7 +89,7 @@
             <h6>Change you password. Please make sure to confirm your email before continuing.</h6>
             <form [formGroup]='changePassForm'>
                 <div class="alert alert-error" *ngIf="changePassForm.controls['newEmail'].hasError('pattern')">Invalid email address</div>
-                <div class="alert alert-success" *ngIf="messageDisplay">{{messageDisplayed}}</div>
+                <div class="alert alert-warning" *ngIf="messageDisplay">{{messageDisplayed}}</div>
                 <label>Email</label>
                 <div>
                     <input type="text" class="form-control" placeholder="" formControlName="newEmail" />
