Just started the user-profile page

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,17 +1,17 @@
 <div class="main-menu-design">
   <div class="row">
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 small-device">
        
-          <div class="logo">
+          <div class="logo ">
             <a routerLink="/">
               <img src="assets/images/Circle.png" />
             </a>
           </div>
       
       </div>
-
-      <div class="col-sm-4">
+ 
+      <div class="col-sm-4 ">
          
             <div class="align-container logo">
               <a routerLink="/">
