--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,7 +1,49 @@
-<p>
-  user-profile works!
-</p>
+<div class="name-wrapper d-flex justify-content-center">
+    <div class="">
+        <h3> {{userObject.firstName}} {{userObject.lastName}}</h3>
+    </div>
+</div>
+
+<div class="wrapper">
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container sticky">
+      <h3>My accoassssssssssssssunt</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+  <div class="profile-container">
+      <h3>My account</h3>
+  </div>
+
 
 <a class="btn btn-succes" routerLink="/home/edit-profile"  >
   EDIT PROFILE
 </a>
+</div>
