--- a/src/app/user/user-profile/user-profile.component.scss
+++ b/src/app/user/user-profile/user-profile.component.scss
@@ -1,10 +1,13 @@
+@import '~scss/profile';
+
+
 .d-flex{
     justify-content: space-between;
   }
   .name-wrapper{
     width: 100%;
-    // margin-top: 3%;
-    position: fixed;
+    padding-top: 2%;
+    // position: fixed;
     top: 0;
     overflow: hidden;
     background-color: white;
@@ -14,13 +17,26 @@
   .wrapper{
     right: 0px;
     margin: 0px auto;
-    padding-top: 3%;
-    max-width: 500px;
+    padding-top: 2%;
+    max-width: 700px;
     position: relative;
   }
   
   .profile-container{
       border: 1px solid rgb(20, 20, 20);
-      padding: 2%;
-      margin-bottom: 2%;
+      padding: 1%;
+      // margin-bottom: 2%;
   }
+
+.info{
+  padding: 7%;
+}
+
+.text-description{
+  font-size: 14px;
+}
+
+.edit-profile-button{
+  margin: 2%;
+  font-size: 15px;
+}
