Create the post component and I linked the user-profile with the post component - modal

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -36,8 +36,7 @@
 
 <div class="wrapper">
     <div class="profile-container ">
-       
-        <a class="btn d-flex justify-content-center">
+        <a class="btn d-flex justify-content-center" (click)="openModalWithComponent()">
             MAKE A POST
         </a>
         <div class="d-flex justify-content-center"> Here will be my posts!</div>
